# agstoolbox

./: .editorconfig  .gitattributes  .gitignore  AUTHORS  LICENSE  MANIFEST.in  README.BBCode  README.md  README.rst  agstoolbox  agstoolbox.spec  agstoolbox_version_info.txt  atbx  atbx.spec  atbx_version_info.txt  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: dependency-review.yml  main.yml  pyinstaller.yml  pylint.yml  python-package.yml
AgsToolbox/AgsToolbox/: AgsToolbox.csproj  Resources.resx  ToolboxMain.cs
AgsToolbox_Sharp/: AgsToolbox.sln
AgsToolbox_Sharp/AgsToolbox/: Program.cs  Resources.Designer.cs  ToolboxApplicationContext.cs  ToolboxMain.Designer.cs
agstoolbox/: __init__.py  __main__.py  at_icons.py  at_trayindicator.py
helper_scripts/: README.md  extract_zips.py  generate_nfo.py  update_version.py
src/agstoolbox/: __init__.py  __main__.py  at_fonts.py  at_icons.py  at_mainpanel.py  at_tasks.py  at_trayindicator.py  configs.py  getdata.py  settings.py
src/agstoolbox/ags/: game_project.py  get_game_projects.py
src/agstoolbox/core/: cmdline.py  settings.py
src/agstoolbox/gh/: getreleases.py  list_releases.py  release.py
src/agstoolbox/panels/: at_mainpanel.py  at_scripts_module_modal.py  at_settings_dialog.py
src/agstoolbox/system/: at_runguard.py  at_unique_application.py
src/agstoolbox/wdgts/: at_dirlist_wdgt.py  at_searchedit.py  at_single_dir_wdgt.py  (+4 more)
tests/: test_ags.py  test_basics.py  test_gh.py  test_pe.py  test_settings_utils.py  test_template.py  test_time.py  test_utils.py  test_version.py
tests/resources/: gh_releases.json  toolbox_gh_releases.json
(+58 files in other folders)
