#[project]
#name = "agstoolbox"
#dynamic = ["version"]
#description = "Utility to help manage Adventure Game Studio Projects and Editors."
#readme = "README.rst"
#requires-python = ">=3.8"
#license = {file = "LICENSE"}
#keywords = ["AGS Toolbox", "Adventure Game Studio", "development", "ags", "Game Development", "gamedev"]
#authors = [
#  {name = "eri0o", email = "eri0onpm@gmail.com" }
#]
#classifiers = [
#  "Intended Audience :: Developers",
#  "Topic :: Software Development :: Build Tools",
#  "License :: OSI Approved :: MIT License",
#  "Programming Language :: Python :: 3.8",
#  "Programming Language :: Python :: 3.9",
#  "Programming Language :: Python :: 3.10",
#  "Programming Language :: Python :: 3.11",
#  "Programming Language :: Python :: 3 :: Only",
#]
#dependencies = [
#  "pyqt6",
#  "requests",
#  "defusedxml",
#  "platformdirs",
#  "pefile"
#]
#
#[tool.setuptools.dynamic]
#version = {attr = "agstoolbox.__version__"}
#
#[project.optional-dependencies]
#test = ["pytest"]
#
#[project.urls]
#"Homepage" = "https://www.adventuregamestudio.co.uk/forums/index.php?topic=59938.0"
#"Bug Reports" = "https://github.com/ericoporto/agstoolbox/issues"
#"Funding" = "https://github.com/sponsors/ericoporto"
#"Source" = "https://github.com/ericoporto/agstoolbox/"
#
#[project.scripts]
#agstoolbox = "agstoolbox"
#atbx = "atbx"
#
#[tool.setuptools]
#package_data = {"agstoolbox" = ["data/*.png"]}
#
#[tool.setuptools.packages.find]
#where = ["src"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
